--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,176 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
+  background-color: #F5F7FB;
   margin: 0;
+  
+}
+
+.blob_left {
+  width: 250px;
+  height: 250px;
+  opacity: 1;
+  position: absolute;
+  bottom: -100px;
+  left: -100px;
+  rotate: -5deg;
+  border-radius: 100px;
+  background-color: #DEEBF8;
+}
+
+.blob_right {
+  width: 250px;
+  height: 250px;
+  opacity: 1;
+  position: absolute;
+  top: -100px;
+  right: -100px;
+  rotate: -5deg;
+  border-radius: 100px;
+  background-color: #FFFAD1;
+}
+
+main {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  color: #293264;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+main > h1 {
+  color: #293264;
+  font-family: Karla;
+  font-weight: 700;
+  font-style: Bold;
+  font-size: 31.25px;
+  leading-trim: NONE;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-align: center;
+  border: 2px solid yellow;
+  padding: 10px;
+  width: 350px;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+main > p {
+  color: #293264;
+  font-family: Inter;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-align: center;
+}
+
+main > button {
+  background-color:#4D5B9E;
+  width: 193px;
+  height: 52px;
+  opacity: 1;
+  top: 314px;
+  left: 179px;
+  border-radius: 15px;
+  color: white;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.quiz-section {
+  margin-left: 20%;
+  margin-right: 20%;
+  margin-top: 5%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px;
+  align-items: left;
+}
+
+.question {
+  opacity: 1;
+  color: #293264;
+  font-family: Karla;
+  font-weight: 700;
+  font-style: Bold;
+  font-size: 20px;
+  line-height: 100%;
+  letter-spacing: 0%;
+}
+
+.question-section > hr {
+  border: 0.8px solid #DBDEF0;
+  height: 0px;
+  opacity: 1;
+  border-width: 0.8px;
+}
+
+.options {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.options > button {
+  border: 1px solid #4D5B9E;
+  background-color: white;
+  cursor: pointer;
+  padding: 5px;
+  opacity: 1;
+  border-radius: 8px;
+  font-family: Inter;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-align: center;
+  color: #293264;
+}
+
+.options > button.selected {
+  background-color: #D6DBF5;
+}
+
+.options > button.correct {
+  background-color: #94D7A2;
+}
+
+.options > button.incorrect {
+  background-color: #F8BCBC;
+}
+
+.results-section {
+  margin-left: 20%;
+  margin-right: 20%;
+  margin-top: 5%;
+  display: flex;
+  flex-direction: row;
+  gap: 50px;
+  padding: 20px;
+  align-items: center;
+  justify-content: center;
+}
+
+.results-section > button {
+  border: none;
+  background-color:#4D5B9E;
+  padding: 20px 20px;
+  border-radius: 20px;
+  color: white;
+  cursor: pointer;
+  font-family: Inter;
+  font-weight: 500;
+  font-style: semi bold;
+  font-size: 16px;
+  text-align: center;
+}
+
+.results-section > h2 {
+  color: #293264;
+  font-family: Karla;
+  font-weight: 700;
+  font-style: Bold;
+  font-size: 24px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-align: center;
 }
